--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       h1, h2{
         color: springgreen;
         font-family: sans-serif;
-        align: center;
+        text-align: center;
       }
     </style>
   </head>
