--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         font-family: sans-serif;
         text-align: center;
       }
+      body{
+        backroung-color: blue;
+      }
     </style>
   </head>
   <body>
