correct style of body

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         text-align: center;
       }
       body{
-        backroung-color: blue;
+        background-color: blue;
       }
     </style>
   </head>
